Added a description of the img and added in Ingredients <ul> and directions <ol>

--- a/recipes/roastbeef.html
+++ b/recipes/roastbeef.html
@@ -8,7 +8,24 @@
 <body>
     <h1>Famous Slow Cooker Roast Beef Sandwich!!</h1>
     <img src="https://www.cscassets.com/recipes/wide_cknew/wide_25336.jpg" alt="picture of a roast beef sandwich" height="200px" width="400px">
+    <p><em>Above is a picture of the completed roast beef sandwich!!</em></p>
 
+<h3>Ingredients</h3>
+<ul>
+    <li><strong>Beef Roast:</strong> I use a bottom round beef roast for this recipe. It shreds up nice and has way less fat to pick out before serving as a chuck roast does.</li>
+    <li><strong>Seasonings: </strong>Salt and pepper, as well as onion powder are the only seasonings you need.</li>
+    <li><strong>Brown Gravy Packets:</strong> These help create amazing homemade gravy and add additional flavor to the overall meal.</li>
+    <li><strong>Water:</strong> Adds the perfect amount of liquid for the cooking process to make gravy.</li>
+</ul>
 
+<h3>Step-by-Step Directions</h3>
+<ol>
+    <li>Place the roast into a 4-quart or larger slow cooker. Sprinkle a small amount of salt, pepper, and onion powder onto the beef.</li>
+    <li>In a small bowl whisk together the gravy packets and water until smooth.</li>
+    <li>Pour broth mixture over the roast.</li>
+    <li>Cover and cook on LOW for 8-10 hours.</li>
+    <li>When the cooking time is done, remove roast and place it on a plate. Shred meat and discard any fat. Cover with foil to keep warm.</li>
+    <li>De-grease the gravy in the slow cooker. Add the shredded roast beef back into the gravy. Serve immediately and enjoy!</li>
+</ol>
 </body>
 </html>
