Added description for <img>. Next I added 'Ingredients' <ul>. After this, I added 'Step-by-Step Directions' <ol>.

--- a/recipes/buffalochickendip.html
+++ b/recipes/buffalochickendip.html
@@ -8,6 +8,24 @@
 <body>
     <h1>Bangin Buff Chick Dip!!</h1>
     <img src="https://hips.hearstapps.com/hmg-prod/images/del099923-buffalo-chicken-dip-web-001-ab-hires-index-6529aa2780dac.jpg?crop=0.6668706026307739xw:1xh;center,top&resize=1200:*" alt="picture of buffalo chicken dip" height="200px" width="250px">
-    
+    <p><em>This is a picture of cooked and ready-to-eat Buffalo Chicken Dip!!</em></p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 (10 ounce) cans chunk chicken, drained</li>
+        <li>¾ cup hot pepper sauce (such as Frank's RedHot)</li>
+        <li>2 (8 ounce) packages cream cheese, softened</li>
+        <li>1 cup ranch dressing</li>
+        <li>1 ½ cups shredded Cheddar cheese</li>
+        <li>1 bunch celery, cut into 4-inch pieces</li>
+    </ul>
+
+    <h3>Step-by-Step Directions</h3>
+    <ol>
+        <li>Heat chicken and hot pepper sauce in a skillet over medium heat until heated through, 3 to 5 minutes. Stir in cream cheese and ranch dressing. Cook and stir until well blended and warm, 3 to 5 minutes.</li>
+        <li>Mix in 1/2 of the Cheddar cheese, and transfer the mixture to a slow cooker. Sprinkle the remaining cheese over top.</li>
+        <li>Cover and cook on Low until dip is hot and bubbly, about 35 minutes.</li>
+        <li>Serve with your choice of chip.</li>
+    </ol>
 </body>
 </html>
