Added links to the recipe pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+
+    <li><a href="./recipes/roastbeef.html">Roast Beef Sandwiches</a></li>
+    <li><a href="./recipes/buffalochickendip.html">Buffalo Chicken Dip</a></li>
+    <li><a href="./recipes/salmon.html">Air-Fryer Salmon</a></li>
 </body>
 </html>
